--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "astro": "^5.16.6"
+  },
+  "devDependencies": {
+    "@astrojs/react": "^4.4.2",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   }
 }
