--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "astro": "^5.16.6"
+    "astro": "^5.16.6",
+    "motion": "^12.33.0"
   },
   "devDependencies": {
     "@astrojs/react": "^4.4.2",
