--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "pretty": "prettier --write ."
   },
   "dependencies": {
     "@types/react": "^19.2.7",
@@ -16,6 +17,8 @@
   },
   "devDependencies": {
     "@astrojs/react": "^4.4.2",
+    "prettier": "3.8.1",
+    "prettier-plugin-astro": "0.14.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   }
